tests/e2e/nested_service_block5.error
Error: syntax error in story at line 4, column 12

4|          when ws listen filter:foo as event
                 ^^

E0066: Nested when blocks are not allowed
