tests/e2e/nested_service_block5.story
websocket accept path:"/" as ws
  when ws message as client
	  foo = client.data.foo
	  when ws listen filter:foo as event
		break
